[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/mulit_test.gd" type="Script" id=1]
[ext_resource path="res://assets/simple-grass/Grass.tscn" type="PackedScene" id=2]
[ext_resource path="res://building.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/sha_mo.tscn" type="PackedScene" id=4]
[ext_resource path="res://player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/sounds/sound.tscn" type="PackedScene" id=6]
[ext_resource path="res://newTiny.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/multi/Area.gd" type="Script" id=8]




[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.402324, 1, 0.179363 )

[node name="Duo_ren_game_test" type="Spatial"]
script = ExtResource( 1 )

[node name="Grass" parent="." instance=ExtResource( 2 )]

[node name="building" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.0859, 4.44365, -1.72559 )

[node name="building2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5818, 4.44365, -1.72559 )

[node name="building3" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.8607, 4.44365, -1.72559 )

[node name="building4" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.6573, 4.44365, -1.72559 )

[node name="building5" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.6677, 4.44365, -1.72559 )

[node name="building6" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30.1528, 4.44365, -1.72559 )

[node name="building7" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -34.9991, 4.44365, -1.72559 )

[node name="building8" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -27.8333, 6.69306, -16.563 )

[node name="sand_root" parent="." instance=ExtResource( 4 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )

[node name="RigidBody" parent="." instance=ExtResource( 5 )]

[node name="sound" parent="." instance=ExtResource( 6 )]

[node name="newTiny" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.659259, 7.67834, 9.11882 )

[node name="Area" type="Area" parent="newTiny"]
script = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="newTiny/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.872921, 0 )
shape = SubResource( 2 )
[connection signal="area_entered" from="newTiny/Area" to="newTiny/Area" method="_on_Area_area_entered"]
